fix spacing btwn posts displaying as lists

--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ p {
     width: 40%;
     display: inline;
     float: left;
-    margin-top: 1.3em;
+    margin-top: 0.5em;
 }
 
 .searchcontent {
